--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -8,7 +8,7 @@
 		<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" (click)="showCreateAlertDialog(feedbackBox)" download>Create Email Alert</button>
 		<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" routerLink="/recruiter-alerts" download>Manage Alerts</button>
         <button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" (click)="showSavedCandidates()" download>My Candidates</button>
-	 </div>
+     </div>
 	
 	<div *ngIf="currentView === 'saved-candidates'" class="suggestion-results">
 		
@@ -184,7 +184,9 @@
 			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" (click)="rememberCandidate(suggestedCandidate)" 		*ngIf="lastView != 'saved-candidates' && isSavedCandidate(suggestedCandidate) && !isCandidate()" title="Add candidate to your list of saved candidates" disabled>Save Candidate</button>
 			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" (click)="forgetCandidate()" 							*ngIf="lastView === 'saved-candidates'" title="removed candidate from your list of saved candidates">Unsave Candidate</button>
 			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" (click)="showNotesDialog(notesBox,suggestedCandidate)" 	*ngIf="lastView === 'saved-candidates'">Notes</button>
-			
+			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" *ngIf="isCandidate()" (click)="deleteAccount()"> Delete</button>
+			<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}" *ngIf="isCandidate()" (click)="editAccount()"> Edit</button>
+        	
 			<a class="currliculum-link" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" *ngIf="(!isCandidate()) && (lastView != 'saved-candidates' || (lastView == 'saved-candidates' && !isNoLongerAvailable()))">
 				<button class="btn btn-secondary btnRight main-btn {{suggestionMobileBtnClass}}">Download CV</button>
 			</a>
@@ -305,19 +307,19 @@
 						<td class="candidate-suggestion-table-hdr">Name</td>
 						<td>{{suggestedCandidate.firstname}} {{suggestedCandidate.surname}}</td>
 					</tr>
-					<tr>
+					<tr *ng="!isCandidate()">
 						<td class="candidate-suggestion-table-hdr">Skill Accuracy</td>
 						<td>
 							<div class="suggestion-perception-{{suggestedCandidate.accuracySkills}}"></div>
 						</td>
 					</tr>
-					<tr>
+					<tr *ng="!isCandidate()">
 						<td class="candidate-suggestion-table-hdr">Language Accuracy</td>
 						<td>
 							<div class="suggestion-perception-{{suggestedCandidate.accuracyLanguages}}"></div>
 						</td>
 					</tr>
-					<tr>
+					<tr *ng="!isCandidate()">
 						<td class="candidate-suggestion-table-hdr">Matching Skills</td>
 						<td>
 							<div style="float:center" *ngFor="let skill of skillFilters" class="{{hasRequiredSkill(skill)}}">
