--- a/recruit-gui/src/app/faq/faq.component.html
+++ b/recruit-gui/src/app/faq/faq.component.html
@@ -2,28 +2,29 @@
 	<div class="faq">
 		<h3>Is the trial completely free</h3>
 		<p>
-			The 90 day trial is completely free. You have full access to the features of the site. There are no hidden costs or margins. You can place as many
+			The 30 day trial is completely free. You have full access to the features of the site. There are no hidden costs or margins. You can place as many
 			candidates as you like during the trial and there are no costs involved
 		</p>
     </div>
     <div class="faq">
-		<h3>What happens at the end of the 90 day trial period</h3>
+		<h3>What happens at the end of the 30 day trial period</h3>
 		<p>
-			At the end of the 90 day trial period your account blocks automatically. If you no longer wish to use the site there is no action required. Therefore 
-			there is no risk to taking out the trial.
+			At the end of the 30 day trial your account switches to a credit based system. You can still access the site and perform the same functions until 
+			you run out of credits. You will receive new credits each week. 
 		</p>
 	</div>
 	<div class="faq">
-		<h3>Can I use the site after the 90 day free trial</h3>
+		<h3>Can I use the site after the 30 day free trial</h3>
 		<p>
-			Yes. Once the trial ends your account is automatically blocked. When you log-in you will see an option to take out an annual subscription to continue using the site. 
-			This subscription costs 120 euro's per year excluding tax. Once your request has been made you will be contacted for the details to setup the invoice.
+			Yes. You can either continue to use the system for free using credit based access. Once you run out of credits you will have to wait until you are asgined new
+			credits the following week to carry out certain function. You can also opt for a subscription, you will then have unlimited access to the site for the duration of 
+			the subscription
 		</p>
 	</div>
 	<div class="faq">
 		<h3>Are there additional costs</h3>
 		<p>
-			No. The only cost is the annual subscription. You have full access to the site all the time you have a subscription. There are no margins or hidden fees
+			No. The only cost is the subscription you choose if you choose for non credit based access. You have full access to the site all the time you have a subscription. There are no margins or hidden fees
 		</p>
 	</div>
 	<div class="faq">
