--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
@@ -1,6 +1,6 @@
 <!-- Signup box -->
 <div class="segment signupbox">
-	<h1>90 Day free trial</h1>
+	<h1>30 Day free trial</h1>
 	<form [formGroup]="signupForm">
 		<table>
 		<tr>
@@ -51,20 +51,23 @@
 <div class="segment">
 	<h1>Free trial</h1>
 						<p>
-						IT Recruiters are offered a free 90 day trial with full access to the system. 
+						IT Recruiters are offered a free 30 day trial with full access to the system. 
 						Within this time you have full access the CV database and can post open roles on the IT job board.
 						<p>
 						<p>
-						After the trial period has expired you can take out a yearly subscription for continued access to the 
-						system.
+						After the trial period has expired you can still access the site using the free credit based system. You will be assigned a set amount of credits each week. 
+						Once the credits run out you will have to wait until you have new credits to carry out certain function on the site
 						</p>	
+						<p>
+						Alternatively you can opt for a paid subscription. With subscription based access there are no limits to how many functions you can carry out on the site.
+						</p>
 </div>
 
 <!-- Pricing information -->
 <div class="segment">
 	<h1>Pricing</h1>
 						<p><b class="highlight">EUR 120</b> ex BTW per recruiter for an annual subscription</p>
-						<p>You have the option to start a subscription after the 90 days trial period has expired if you wish to continue to access the site.</p>
+						<p>You have the option to start a subscription after the 30 days trial period has expired if you wish to continue to access the site.</p>
 						<p>IT recruiters will have full access to the site features including</p>
 						<ul>
 							<li>Unlimited Access to the IT Candidate CV database</li>
