--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -134,3 +134,10 @@
 .feedbackBox ul{
 	margin-top:20px;
 }
+
+.main-btns{
+	width:155px;
+	margin-right:10px;
+	margin-bottom:10px;
+	margin-top:5px;	
+}
