trial expired options page

--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.html
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.html
@@ -189,35 +189,37 @@
 			
 			<div class="center">
 				<div class="sub-opt-div {{mobCss}}">
-					<h3>Free - Credit Based Access</h3>
+					<h3>Free - Credit Based</h3>
 					<p>
 					This option provides free access based on a weekly allocation of credits. Once the credits are 
 					exhausted you will no longer have access to specific features until you are assigned more credits the
 					following week.
 					</p>
-					<ul>
-						<li>Free access to the site</li>
-						<li>8 Credits for downloading Curriculums</li>
-						<li>2 Credits for the Job board</li>
-						<li>2 Credits for the Marketplace</li>
-						<li>New credits added every Monday</li>
-						<li>Unused credits will be lost.</li>
-					</ul>
-					<button class="btn btn-secondary">Select</button>
+					<div>
+						<ul>
+							<li>8 Credits for Curriculums</li>
+							<li>2 Credits for the Job board</li>
+							<li>2 Credits for the Marketplace</li>
+							<li>New credits added every Monday</li>
+							<li>Unused credits will be lost.</li>
+						</ul>
+						<button class="btn btn-secondary">Select</button>
+					</div>
 				</div>
 				<div class="sub-opt-div {{mobCss}}">
 					<h3>Paid Subscription</h3>
 					<p>
 					This option provides unlimited access to the site for the duration of the Subscription. Once the subscription has 
-					expired you can opt to take out a further subscription. Select this option to see the types of available subscriptions.
+					expired you can opt to take out a further subscription. Select this option to see available subscription options.
 					</p>
+					<div>
 					<ul>
-						<li>Paid access to the site from 15 euro's</li>
 						<li>Unlimited Curriculums downloads</li>
 						<li>Unlimited Job Board postings</li>
 						<li>Unlimited Marketplace requests</li>
 					</ul>
 					<button class="btn btn-secondary" (click)="showSubscriptionOptions()">Select</button>
+					</div>
 				</div>
 				<div class="spacer"></div>
 			</div>
