--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
@@ -107,11 +107,11 @@
 }
 
 #account-details-input label{
-	width:50%;
+	width:100%;
 }
 
 #account-details-input input[type="text"]{
-	width:50%;
+	width:100%;
 }
 
 #account-details-input textarea{
@@ -148,15 +148,11 @@
 	height:70px;
 }
 
-.label{
-	background:grey;
-	font-weight:bold;
-}
-
 .btnSubscribe{
 	height:50px;
 	padding:10px;
-	float:right;
+	float:center;
+	margin-top:20px;
 }
 
 .sub-opt-div{
@@ -194,4 +190,71 @@
 .spacer{
 	clear:both;
 	height:20px;
+}
+
+.subs-opt-box{
+	width:45%;
+	border:2px solid grey;
+	padding:10px;
+	margin:10px;
+	float:left;
+	cursor:pointer;
+}
+
+.subs-opt-box-mob{
+	width:100%;
+}
+
+.subs-opt-box:hover{
+	border:2px solid #6A5ACD;
+	background:lightgrey;
+	
+}
+
+.label{
+	font-weight:bold;
+	color:green;
+	text-align:left;
+}
+
+.account-details{
+	width:100%;
+}
+
+.account-details table{
+	width:50%;
+}
+
+.account-details table tr td{
+	width:100%;
+}
+
+.account-details input[type="text"]{
+	width:100%;
+}
+
+.account-details textarea{
+	width:100%;
+	height:70px;
+}
+
+.account-details-mob{
+	width:100%;
+}
+
+.account-details-mob table{
+	width:100%;
+}
+
+.account-details-mob table tr td{
+	width:100%;
+}
+
+.account-details-mob input[type="text"]{
+	width:100%;
+}
+
+.account-details-mob textarea{
+	width:100%;
+	height:70px;
 }
